Added blog text

--- a/index.html
+++ b/index.html
@@ -170,35 +170,35 @@
         <div class="row">
           <div class="col-sm-4 blog-card">
             <img src="./img/blog-1.png" alt="" class="blog-img" />
-            <h5 class="blog-heading">Heading</h5>
+            <h5 class="blog-heading">10 Best Things to Do in Autumn Kharkiv</h5>
             <p class="blog-text">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam
-              debitis aliquam molestias, ipsum dolor quis optio officiis quia
-              quaerat eaque corrupti sed maiores consectetur blanditiis facilis
-              quisquam voluptate pariatur alias?
+              Kharkiv may not be as popular as Lviv or Kyiv when it comes to
+              traveling but Kharkiv didn't earn the second biggest city in
+              Ukraine and a former capital city position for nothing...
             </p>
+            <a href="№" class="about-link">learn more...</a>
           </div>
 
           <div class="col-sm-4 blog-card">
             <img src="./img/blog-2.png" alt="" class="blog-img" />
-            <h5 class="blog-heading">Heading</h5>
+            <h5 class="blog-heading">New Fountains in Shevchenko Park</h5>
             <p class="blog-text">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam
-              debitis aliquam molestias, ipsum dolor quis optio officiis quia
-              quaerat eaque corrupti sed maiores consectetur blanditiis facilis
-              quisquam voluptate pariatur alias?
+              Closer to the main entrance to the zoo, the process of buinding
+              another unusual fountain has begun. It is thematic and has the
+              working name "Musical monkey band"...
             </p>
+            <a href="№" class="about-link">learn more...</a>
           </div>
 
           <div class="col-sm-4 blog-card">
             <img src="./img/blog-3.png" alt="" class="blog-img" />
-            <h5 class="blog-heading">Heading</h5>
+            <h5 class="blog-heading">the most beautiful carusel</h5>
             <p class="blog-text">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam
-              debitis aliquam molestias, ipsum dolor quis optio officiis quia
-              quaerat eaque corrupti sed maiores consectetur blanditiis facilis
-              quisquam voluptate pariatur alias?
+              The French carousel in Gorky Park won the competition for the
+              title of the most beautiful attraction. Classic carousel with
+              horses, air baloon, princess carriage, cars and elephant...
             </p>
+            <a href="№" class="about-link">learn more...</a>
           </div>
         </div>
       </div>
