Added info in footer

--- a/index.html
+++ b/index.html
@@ -228,7 +228,12 @@
       <!-- footer -->
       <footer class="footer">
         <div class="footer-main-container">
-          <h4 class="footer-title">Kharkiv</h4>
+          <h4 class="footer-title">
+            Kharkiv,
+            <br />
+            ukraine
+          </h4>
+
           <div class="footer-nav">
             <a href="#about" class="nav-link">about</a>
             <a href="#blog" class="nav-link">blog</a>
