--- a/index.html
+++ b/index.html
@@ -148,7 +148,10 @@
               the Derzhprom building in Freedom Square, and the National
               University of Kharkiv.
             </p>
-            <a href="https://en.wikipedia.org/wiki/Kharkiv" class="about-link"
+            <a
+              href="https://en.wikipedia.org/wiki/Kharkiv"
+              class="about-link"
+              target="_blank"
               >learn more...</a
             >
           </div>
