--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
               <div class="facts-bgd"></div>
             </div>
             <div class="facts-text">
-              <p class="facts-numbers">1.5+</p>
+              <p class="facts-numbers">1.4+</p>
               <p class="facts-description">Million people</p>
             </div>
           </div>
@@ -255,8 +255,9 @@
                 type="email"
                 placeholder="Enter your email"
                 class="email-input"
+                id="user-input"
               />
-              <input type="button" value="Subscribe" class="subscribe-btn" />
+              <input type="button" value="Subscribe" class="subscribe-btn" id="subscribe-btn"/>
             </form>
           </div>
         </div>
@@ -280,5 +281,6 @@
         </p>
       </footer>
     </div>
+    <script src="./src/index.js"></script>
   </body>
 </html>
